<resources>
    <string name="app_name">Zeiterfassung</string>

    <string name="action_list">Auflistung</string>
    <string name="action_new">Neu</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="StartLabel">Startzeit:</string>
    <string name="EndLabel">Endzeit:</string>
    <string name="StartButton">Starten</string>
    <string name="EndButton">Beenden</string>
    <string name="PauseLabel">Pause:</string>
    <string name="CommentLabel">Kommentar:</string>
    <string name="StartTimeColumn">Startzeit</string>
    <string name="EndTimeColumn">Endzeit</string>
    <string name="start_date_invalid_format">Startdatum liegt im falschen Format vor. Datenbank ist korrumpiert.</string>
    <string name="title_activity_record_list">Auflistung</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_edit_record">Neuer Eintrag</string>
    <string name="action_delete">Löschen</string>
    <string name="action_export">Export</string>
    <string name="export_dialog_title">CSV Export ...</string>
    <string name="export_dialog_message">Alle Datensätze werden in CSV-Datei exportiert.</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="export_dialog_cancel_message">Export wird abgebrochen!</string>
    <string name="button_delete">Löschen</string>
    <string name="delete_dialog_message">Wollen Sie den Datensatz wirklich löschen?</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="activity_title_edit">Datensatz bearbeiten</string>
    <string name="PlaceHolder" translatable="false">---</string>
    <string name="title_activity_issue">IssueActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_load">Laden</string>
    <string name="action_web">Web</string>
    <string name="error_no_network">Keine Internetverbindung!</string>
    <string name="title_activity_sensor">SensorActivity</string>
</resources>
