<?xml version="1.0" encoding="utf-8"?><!-- Relativ Layout Version -->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_column="3"
    android:rowCount="5">

    <!-- Erste Zeile -->
    <TextView
        android:id="@+id/StartTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="top|left"
        android:text="@string/StartLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/StartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center|left"
        android:text="@string/PlaceHolder" />

    <TextView
        android:id="@+id/StartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_gravity="center|left"
        android:text="@string/PlaceHolder" />

    <!-- Zweite Zeile -->
    <TextView
        android:id="@+id/EndTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/EndLabel"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="top|left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/EndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center|left"
        android:text="@string/PlaceHolder" />

    <TextView
        android:id="@+id/EndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="center|left"
        android:text="@string/PlaceHolder" />

    <!-- Dritte Zeile -->
    <TextView
        android:id="@+id/PauseLabel"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/PauseLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center|left"
        android:text="@string/PlaceHolder" />

    <!-- Vierte Zeile -->
    <TextView
        android:id="@+id/CommentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="top|left"
        android:text="@string/CommentLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Fünfte Zeile -->
    <TextView
        android:id="@+id/Comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="top|left" />
</GridLayout>
